# BMI270_act_rec

./: CMakeLists.txt  app.overlay  prj.conf
src/: bmi270_init.c  bmi270_init.h  main.c
